AdjCache use URL