@@ -34,8 +34,6 @@ import javax.xml.bind.annotation.XmlAttribute;
 import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.XmlID;
 import javax.xml.bind.annotation.XmlRootElement;
-import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -67,7 +65,7 @@ public class XMLVariantParser implements VariantParser {
      */
     public XMLVariantParser(final URL variantsXMLURL) {
         if (variantsXMLURL == null) {
-            throw new IllegalArgumentException();
+            throw new IllegalArgumentException("URL is null");
         }
 
         Log.println("XMLVariantParser: Parsing: ", variantsXMLURL);
@@ -79,7 +77,7 @@ public class XMLVariantParser implements VariantParser {
                 .unmarshal(variantsXMLURL, RootVariants.class);
         variantList = rootVariants.variants;
         variantList.stream()
-                .forEach(variant -> variant.setBaseURL(variantsXMLURL));
+                .forEach(variant -> variant.setBaseURL(variantsXMLURL)); // FIXME
         Log.printTimed(time, "   time: ");
     }// parse()
 
@@ -106,7 +104,7 @@ public class XMLVariantParser implements VariantParser {
      * this is a simpler solution)
      */
     public static class AdjCache {
-        private static final LRUCache<URI, AdjCache> adjCache = new LRUCache<>(
+        private static final LRUCache<URL, AdjCache> adjCache = new LRUCache<>(
                 6); // URI -> AdjCache objects
 
         // instance variables
@@ -121,9 +119,10 @@ public class XMLVariantParser implements VariantParser {
 
         /**
          * Gets the ProvinceData for a given adjacency URI
+         * @param adjacencyURL
          */
-        public static ProvinceData[] getProvinceData(final URI adjacencyURI) {
-            final AdjCache ac = get(adjacencyURI);
+        public static ProvinceData[] getProvinceData(final URL adjacencyURL) {
+            final AdjCache ac = get(adjacencyURL);
             return ac.provinceData
                     .toArray(new ProvinceData[ac.provinceData.size()]);
         }// getProvinceData()
@@ -131,9 +130,10 @@ public class XMLVariantParser implements VariantParser {
 
         /**
          * Gets the BorderData for a given adjacency URI
+         * @param adjacencyURL
          */
-        public static BorderData[] getBorderData(final URI adjacencyURI) {
-            final AdjCache ac = get(adjacencyURI);
+        public static BorderData[] getBorderData(final URL adjacencyURL) {
+            final AdjCache ac = get(adjacencyURL);
             return ac.borderData.toArray(new BorderData[ac.borderData.size()]);
         }// getBorderData()
 
@@ -141,18 +141,14 @@ public class XMLVariantParser implements VariantParser {
         /**
          * Gets the AdjCache object from the cache, or parses from the URI, as appropriate
          */
-        private static AdjCache get(final URI aURI) {
+        private static AdjCache get(final URL url) {
             // see if we already have the URI data cached.
-            return adjCache.computeIfAbsent(aURI, adjacencyURI -> {
-                try {
-                    // final URL url = new URL(vpURL, adjacencyURI.toString());
-                    final XMLProvinceParser pp = new XMLProvinceParser(
-                            adjacencyURI.toURL());
-                    return new AdjCache(Arrays.asList(pp.getProvinceData()),
-                            Arrays.asList(pp.getBorderData()));
-                } catch (MalformedURLException e) {
-                    throw new IllegalArgumentException(e);
-                }
+            return adjCache.computeIfAbsent(url, adjacencyURI -> {
+                // final URL url = new URL(vpURL, adjacencyURI.toString());
+                final XMLProvinceParser pp = new XMLProvinceParser(
+                        adjacencyURI);
+                return new AdjCache(Arrays.asList(pp.getProvinceData()),
+                        Arrays.asList(pp.getBorderData()));
             });
         }// get()
     }// inner class AdjCache
